# asterius

./: .gitignore  build_docs.sh
.circleci/: config.yml
asterius/: package.yaml
asterius/src/Asterius/: TH.hs
asterius/test/: diagrams.hs
asterius/test/diagrams/: Hilbert.hs  Pentaflake.hs  SquareLimit.hs  Sunflower.hs  asterius-diagrams.cabal
asterius/test/th/: th.hs
blog/: blog.rst
docs/: asterius_exec_model.rst  conf.py  exec_model.md  exec_model.rst  hs_exec_coop.rst  hs_exec_coop_worker.rst  hs_exec_model.rst  hs_exec_sync.rst  index.md  index.rst  js_exec_model.rst  memory.rst
ghc-toolkit/boot-libs/ghci/GHCi/: Message.hs
